menambahkan validasi, merubah outpatient yang awalnya menggunakan id pasien dan user menjadi kode pasien dan user.
