# internal/core/entity/models/MedicCheck.go
@@ -1,12 +1,14 @@
 package models
 
 type MedicCheck struct {
-	ID uint ` json:"id" gorm:"primarykey:autoIncrement:false"`
-	BloodTension int `json:"blood_tension"`
-	Height int `json:"height"`
-	Weight int `json:"weight"`
-	BodyTemperature int `json:"body_temp"`
-	MedicRecordID uint `json:"medic_record_id"`
-	UserID uint `json:"user_id"`
-	Status int
+	BloodTension    int    `json:"blood_tension"`
+	Height          int    `json:"height"`
+	Weight          int    `json:"weight"`
+	BodyTemperature int    `json:"body_temp"`
+	MedicRecordID   uint   `gorm:"primarykey;autoincrement:false"`
+	UserCode        string `json:"nurse_code" gorm:"index"`
+	Status          int
+
+	User        User `gorm:"foreignkey:UserCode;references:code"`
+	MedicRecord *MedicRecord
 }
