# internal/core/entity/models/MedicalSession.go
@@ -2,26 +2,31 @@ package models
 
 import "gorm.io/gorm"
 
-type	MedicalSession struct {
-	MedicRecordID uint
-	UserID uint `json:"medical_staff_id"`
-	MedicalFacilityID uint `json:"medical_facility_id"`
-	SessionID uint `json:"session_id"`
-	DateCheck string `json:"date_check"`
-	Queue int
+type MedicalSession struct {
+	MedicRecordID     uint   `gorm:"primarykey;autoincrement:false"`
+	UserCode          string `json:"doctor_code" gorm:"index"`
+	MedicalFacilityID uint   `json:"facility_id"`
+	SessionID         uint   `json:"session_id"`
+	DateCheck         string `json:"date_check"`
+	Queue             int
+
+	MedicalFacility MedicalFacility
+	MedicRecord     *MedicRecord
+	Session         Session
+	User            User `gorm:"foreignkey:UserCode;references:code"`
 }
 
 func (ms *MedicalSession) BeforeCreate(tx *gorm.DB) (err error) {
 	var count int64
 
 	tx.Model(&ms).
-		Where("user_id = ?", ms.UserID).
+		Where("user_code = ?", ms.UserCode).
 		Where("medical_facility_id = ?", ms.MedicalFacilityID).
 		Where("date_check = ?", ms.DateCheck).
 		Where("session_id = ?", ms.SessionID).
 		Count(&count)
 
-	ms.Queue = int(count)+1
+	ms.Queue = int(count) + 1
 
 	return
 }
